--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	<title>Favourite Song</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -11,7 +12,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div>
-		<a href="https://youtu.be/hNuJbAbnQJY?si=Ni04PwIZJl2Tlc3x"></a>
+		 <p>My current favourite song is <a href="https://youtu.be/hNuJbAbnQJY?si=Ni04PwIZJl2Tlc3x">Tarashti hain nighein</a></p>
 	</div>
 
 </body>
